# edge-detection-wasm

./: Cargo.toml  LICENSE_MIT  README.md  optimize.js  package-lock.json  package.json
benches/: bench.rs
docs/: 0.bootstrap.js  bootstrap.js  edge_detection_wasm_bg.acccc.wasm  index.html
src/: edge.rs  lib.rs
www/: bootstrap.js  edge.js  index.js  package-lock.json  package.json  webpack.config.js  worker.js
