[package]
name = "edge-detection-wasm"
version = "2.1.1"
authors = ["Nick Randall <nicksrandall@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/nicksrandall/edge-detection-wasm"
description = "The canny edge detection algorithm for WebAssembly"
readme = "README.md"
keywords = ["computer-vision", "canny"]
categories = ["algorithms", "multimedia::images", "science", "visualization"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1"
wasm-bindgen = "0.2"
image = "0.20"
js-sys = "0.3"
imageproc = "0.17"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true

